--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-sass": "^2.2.0"
+  },
+  "dependencies": {
+    "express": "^4.13.4"
   }
 }
