--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-sass": "^2.2.0"
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-minify-css": "^1.2.3",
+    "gulp-sass": "^2.2.0",
+    "gulp-uglify": "^1.5.2"
   },
   "dependencies": {
     "express": "^4.13.4"
