--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "Matt Gibbs",
   "license": "MIT",
   "devDependencies": {
+    "event-stream": "^3.3.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.2.3",
+    "gulp-nodemon": "^2.0.6",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.2"
   },
