--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Matt Gibbs",
   "license": "MIT",
   "devDependencies": {
+    "bower": "^1.7.7",
     "event-stream": "^3.3.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
