--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "typed.js": "~1.1.1",
-    "jquery": "^2.2.0"
+    "jquery": "^2.2.0",
+    "bootstrap": "^3.3.6"
   }
 }
