--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "author": "Matt Gibbs",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.13.4",
     "bower": "^1.7.7",
     "event-stream": "^3.3.2",
+    "express": "^4.13.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.2.3",
     "gulp-nodemon": "^2.0.6",
     "gulp-sass": "^2.2.0",
-    "gulp-uglify": "^1.5.2"
+    "gulp-uglify": "^1.5.2",
+    "jade": "^1.11.0"
   }
 }
