--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "typed.js": "~1.1.1",
     "jquery": "^2.2.0",
-    "bootstrap": "^3.3.6",
-    "entypo": "entypo-css-only#^1.0.0"
+    "bootstrap": "^3.3.6"
   }
 }
