--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,6 @@
     "typed.js": "~1.1.1",
     "jquery": "^2.2.0",
     "bootstrap": "^3.3.6",
-    "Ionicons": "ionicons#^2.0.1"
+    "entypo": "entypo-css-only#^1.0.0"
   }
 }
