--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
-    "gulp-minify-css": "^1.2.3",
+    "gulp-cssnano": "^2.1.1",
     "gulp-nodemon": "^2.0.6",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.2",
