--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "MIT",
   "dependencies": {
     "bower": "^1.7.7",
-    "event-stream": "^3.3.2",
     "express": "^4.13.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
@@ -20,6 +19,7 @@
     "gulp-nodemon": "^2.0.6",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.2",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "streamqueue": "^1.1.1"
   }
 }
