--- a/package.json
+++ b/package.json
@@ -15,20 +15,18 @@
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
-    "gulp-webpack": "^1.5.0",
-    "ts-loader": "^2.0.0",
-    "typescript": "^2.1.5",
-    "webpack": "^2.2.1",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-cssnano": "^2.1.1",
-    "gulp-nodemon": "^2.0.6",
-    "gulp-sass": "^2.2.0",
-    "gulp-uglify": "^1.5.2",
     "@types/react": "^15.0.6",
     "@types/react-dom": "^0.14.22",
     "bower": "^1.7.7",
-    "streamqueue": "^1.1.1"
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "2.0.0-rc.3",
+    "gulp": "^3.9.1",
+    "gulp-webpack": "^1.5.0",
+    "node-sass": "^4.5.0",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "ts-loader": "^2.0.0",
+    "typescript": "^2.1.5",
+    "webpack": "^2.2.1"
   }
 }
