--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Matt Gibbs",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "express": "^4.13.4",
+    "jquery": "^3.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
