--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "bower": "^1.7.7",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "2.0.0-rc.3",
+    "file-loader": "^0.10.0",
+    "imports-loader": "^0.7.0",
     "node-sass": "^4.5.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "ts-loader": "^2.0.0",
     "typescript": "^2.1.5",
+    "url-loader": "^0.5.7",
     "webpack": "^2.2.1"
   }
 }
