--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "file-loader": "^0.10.0",
     "imports-loader": "^0.7.0",
     "node-sass": "^4.5.0",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "ts-loader": "^2.0.0",
