--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.0",
-    "@angular/compiler-cli": "^5.2.0",
+    "@angular/cli": "^1.7.1",
+    "@angular/compiler-cli": "^5.2.6",
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
