--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.16.2",
     "rxjs": "^5.5.6",
     "sass": "^1.0.0-beta.5.2",
+    "typescript": "~2.7.2",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
@@ -51,7 +52,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "tslint": "~5.9.1"
   }
 }
