--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
   "dependencies": {
     "@angular/animations": "^5.2.0",
     "@angular/cli": "^1.7.1",
-    "@angular/compiler-cli": "^5.2.6",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.6",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
