--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "mtg",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
