--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/cli": "~11.2.7",
     "@angular/compiler-cli": "~11.2.8",
     "@types/node": "^12.11.1",
+    "tailwind-scrollbar": "^1.2.4",
     "tailwindcss": "^2.1.1",
     "typescript": "~4.1.5"
   }
