--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build"
+    "build": "ng build",
+    "dev:ssr": "ng run mtgibbs-xyz:serve-ssr",
+    "serve:ssr": "node dist/mtgibbs-xyz/server/main.js",
+    "build:ssr": "ng build --prod && ng run mtgibbs-xyz:server:production",
+    "prerender": "ng run mtgibbs-xyz:prerender"
   },
   "private": true,
   "dependencies": {
@@ -15,9 +19,12 @@
     "@angular/forms": "~11.2.8",
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
+    "@angular/platform-server": "~11.2.8",
     "@angular/router": "~11.2.8",
+    "@nguniversal/express-engine": "^11.0.0",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.0",
+    "express": "^4.15.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -26,6 +33,8 @@
     "@angular-devkit/build-angular": "~0.1102.7",
     "@angular/cli": "~11.2.7",
     "@angular/compiler-cli": "~11.2.8",
+    "@nguniversal/builders": "^11.2.1",
+    "@types/express": "^4.17.0",
     "@types/node": "^12.11.1",
     "tailwind-scrollbar": "^1.2.4",
     "tailwindcss": "^2.1.1",
