--- a/package.json
+++ b/package.json
@@ -1,58 +1,45 @@
 {
-  "name": "mtgibbs.xyz",
-  "version": "3.0.0",
-  "license": "MIT",
+  "name": "mtgibbs-xyz",
+  "version": "4.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod"
+    "start": "ng serve",
+    "build": "ng build",
+    "dev:ssr": "ng run mtgibbs-xyz:serve-ssr",
+    "serve:ssr": "node dist/mtgibbs-xyz/server/main.js",
+    "build:ssr": "ng build --prod && ng run mtgibbs-xyz:server:production",
+    "prerender": "ng run mtgibbs-xyz:prerender",
+    "start:heroku": "node dist/mtgibbs-xyz/server/main.js",
+    "postinstall": "npm run build:ssr"
   },
   "private": true,
-  "engines": {
-    "node": "8.16.2",
-    "npm": "5.6.0"
-  },
   "dependencies": {
-    "@angular/animations": "5.2.5",
-    "@angular/cli": "1.7.4",
-    "@angular/common": "5.2.5",
-    "@angular/compiler": "5.2.5",
-    "@angular/compiler-cli": "5.2.6",
-    "@angular/core": "5.2.5",
-    "@angular/forms": "5.2.5",
-    "@angular/http": "5.2.5",
-    "@angular/platform-browser": "5.2.5",
-    "@angular/platform-browser-dynamic": "5.2.5",
-    "@angular/router": "5.2.5",
-    "@ng-bootstrap/ng-bootstrap": "1.1.2",
-    "bootstrap": "4.3.1",
-    "core-js": "2.5.3",
-    "express": "4.16.2",
-    "rxjs": "5.5.6",
-    "sass": "1.0.0-beta.5.2",
-    "typescript": "2.5.3",
-    "zone.js": "0.8.20"
+    "@angular/animations": "~11.2.8",
+    "@angular/common": "~11.2.8",
+    "@angular/compiler": "~11.2.8",
+    "@angular/core": "~11.2.8",
+    "@angular/forms": "~11.2.8",
+    "@angular/platform-browser": "~11.2.8",
+    "@angular/platform-browser-dynamic": "~11.2.8",
+    "@angular/platform-server": "~11.2.8",
+    "@angular/router": "~11.2.8",
+    "@nguniversal/express-engine": "^11.0.0",
+    "@tailwindcss/forms": "^0.3.2",
+    "@tailwindcss/typography": "^0.4.0",
+    "express": "^4.15.2",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular/language-service": "5.2.5",
-    "@types/jasmine": "2.8.6",
-    "@types/jasminewd2": "2.0.3",
-    "@types/node": "6.0.101",
-    "codelyzer": "4.1.0",
-    "enhanced-resolve": "4.0.0",
-    "jasmine-core": "2.8.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "2.0.0",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "1.4.1",
-    "karma-jasmine": "1.1.1",
-    "karma-jasmine-html-reporter": "0.2.2",
-    "protractor": "5.4.1",
-    "ts-node": "4.1.0",
-    "tslint": "5.9.1"
+    "@angular-devkit/build-angular": "~0.1102.7",
+    "@angular/cli": "~11.2.7",
+    "@angular/compiler-cli": "~11.2.8",
+    "@nguniversal/builders": "^11.2.1",
+    "@types/express": "^4.17.0",
+    "@types/node": "^12.11.1",
+    "tailwind-scrollbar": "^1.2.4",
+    "tailwindcss": "^2.1.1",
+    "typescript": "~4.1.5"
   }
 }
