--- a/package.json
+++ b/package.json
@@ -1,45 +1,29 @@
 {
-  "name": "mtgibbs-xyz",
-  "version": "4.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "dev:ssr": "ng run mtgibbs-xyz:serve-ssr",
-    "serve:ssr": "node dist/mtgibbs-xyz/server/main.js",
-    "build:ssr": "ng build --prod && ng run mtgibbs-xyz:server:production",
-    "prerender": "ng run mtgibbs-xyz:prerender",
-    "start:heroku": "node dist/mtgibbs-xyz/server/main.js",
-    "postinstall": "npm run build:ssr"
-  },
+  "name": "mtgibbs.xyz",
+  "version": "5.0.0",
   "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "@angular/animations": "~11.2.8",
-    "@angular/common": "~11.2.8",
-    "@angular/compiler": "~11.2.8",
-    "@angular/core": "~11.2.8",
-    "@angular/forms": "~11.2.8",
-    "@angular/platform-browser": "~11.2.8",
-    "@angular/platform-browser-dynamic": "~11.2.8",
-    "@angular/platform-server": "~11.2.8",
-    "@angular/router": "~11.2.8",
-    "@nguniversal/express-engine": "^11.0.0",
-    "@tailwindcss/forms": "^0.3.2",
-    "@tailwindcss/typography": "^0.4.0",
-    "express": "^4.15.2",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "classnames": "2.3.1",
+    "next": "12.0.10",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "swr": "1.2.2",
+    "tailwind-scrollbar": "1.3.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.7",
-    "@angular/cli": "~11.2.7",
-    "@angular/compiler-cli": "~11.2.8",
-    "@nguniversal/builders": "^11.2.1",
-    "@types/express": "^4.17.0",
-    "@types/node": "^12.11.1",
-    "tailwind-scrollbar": "^1.2.4",
-    "tailwindcss": "^2.1.1",
-    "typescript": "~4.1.5"
+    "@types/node": "17.0.18",
+    "@types/react": "17.0.39",
+    "autoprefixer": "10.4.2",
+    "eslint": "8.9.0",
+    "eslint-config-next": "12.0.10",
+    "postcss": "8.4.6",
+    "tailwindcss": "3.0.23",
+    "typescript": "4.5.5"
   }
 }
